fix: resolve 11 checkstyle violations in pinot-controller
- Remove trailing whitespace on blank lines in SessionAuthenticationFilter
- Remove blank lines before end-of-file in 4 new/modified files
- Replace Collections.emptyList/emptyMap with List.of/Map.of in PinotSessionLoginResource
- Fix LeftCurly violation in SessionManagerTest (synchronized block brace)

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>